--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1 class="text-3xl font-bold underline">Hello world!</h1>
+<div
+  class="m-20 p-5 border-solid border-2 border-green-500 rounded-lg bg-green-500/5"
+>
+  <div class="flex justify-center p-6">
+    <h1 class="text-7xl text-green-500 font-medium">Hello world!</h1>
+  </div>
+
+  <div class="flex justify-center mt-10 w-2/3 mx-auto">footer</div>
+</div>
