--- a/src/app/pages/advanced/advanced.component.html
+++ b/src/app/pages/advanced/advanced.component.html
@@ -1,9 +1,10 @@
-<div>
+<div class="p-5">
   <form>
     <input
-      class="bg-gray-200 py-1 px-2 rounded border border-solid border-transparent duration-500 ease-linear transition-colors hover:border-green-500 focus:border-purple-500 outline-none shadow-none"
+      class="bg-gray-200 py-1 px-2 rounded border border-solid border-transparent duration-500 ease-linear transition-colors hover:border-green-500 focus:border-purple-500 outline-none shadow-none block mb-6"
       type="text"
       placeholder="Enter email:"
     />
+    <button class="inline-block">Submit</button>
   </form>
 </div>
